--- a/thebanana/thebanana.vcxproj
+++ b/thebanana/thebanana.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="src\component.cpp" />
     <ClCompile Include="src\components\animation_component.cpp" />
     <ClCompile Include="src\components\camera_component.cpp" />
+    <ClCompile Include="src\components\light_component.cpp" />
     <ClCompile Include="src\components\mesh_component.cpp" />
     <ClCompile Include="src\components\native_script_component.cpp" />
     <ClCompile Include="src\components\tag_component.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="include\application_layer.h" />
     <ClInclude Include="include\components\camera_component.h" />
     <ClInclude Include="include\components\components.h" />
+    <ClInclude Include="include\components\light_component.h" />
     <ClInclude Include="include\components\native_script_component.h" />
     <ClInclude Include="include\components\tag_component.h" />
     <ClInclude Include="include\graphics\graphics.h" />
