--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
+ViewportPos=369,253
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -44,7 +45,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=46,32
+Size=32,32
 Collapsed=0
 
 [Window][viewport]
@@ -56,7 +57,7 @@ Collapsed=0
 Pos=17,24
 Size=6,5
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000001,1
 
 [Window][Scene Hierarchy]
 Pos=0,24
@@ -155,7 +156,7 @@ DockId=0x00000003,2
 Pos=17,24
 Size=6,5
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000001,0
 
 [Docking][Data]
 DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
