add type properties to light component, as well as a direction

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,6 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=369,253
-ViewportId=0x9F5F46A1
+Pos=0,0
 Size=400,400
 Collapsed=0
 
@@ -45,7 +44,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=32,32
+Size=46,32
 Collapsed=0
 
 [Window][viewport]
