--- a/bananatree/bananatree.vcxproj.filters
+++ b/bananatree/bananatree.vcxproj.filters
@@ -119,8 +119,10 @@
     <None Include="shaders\rendered\vertex.shader" />
     <None Include="shaders\material_preview\vertex.shader" />
     <None Include="shaders\material_preview\fragment.shader" />
+    <None Include="shaders\point_depth\fragment.shader" />
+    <None Include="shaders\point_depth\geometry.shader" />
+    <None Include="shaders\point_depth\vertex.shader" />
     <None Include="shaders\depth\vertex.shader" />
-    <None Include="shaders\depth\geometry.shader" />
     <None Include="shaders\depth\fragment.shader" />
   </ItemGroup>
   <ItemGroup>
