--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
+ViewportPos=544,211
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -44,7 +45,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=46,32
+Size=32,32
 Collapsed=0
 
 [Window][viewport]
