--- a/bananatree/bananatree.vcxproj
+++ b/bananatree/bananatree.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="src\editor_layer.cpp" />
     <ClCompile Include="src\imgui_layer.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\panels\lighting_panel.cpp" />
     <ClCompile Include="src\panels\log_panel.cpp" />
     <ClCompile Include="src\panels\material_editor_panel.cpp" />
     <ClCompile Include="src\panels\model_registry_panel.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="src\editorconfig.h" />
     <ClInclude Include="src\editor_layer.h" />
     <ClInclude Include="src\imgui_layer.h" />
+    <ClInclude Include="src\panels\lighting_panel.h" />
     <ClInclude Include="src\panels\log_panel.h" />
     <ClInclude Include="src\panels\material_editor_panel.h" />
     <ClInclude Include="src\panels\model_registry_panel.h" />
