--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,6 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=544,211
-ViewportId=0x9F5F46A1
+Pos=0,0
 Size=400,400
 Collapsed=0
 
@@ -45,7 +44,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=32,32
+Size=46,32
 Collapsed=0
 
 [Window][viewport]
@@ -55,25 +54,25 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=17,24
-Size=6,5
+Size=6,4
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=15,5
+Size=15,4
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Log]
-Pos=0,31
-Size=32,1
+Pos=0,30
+Size=32,2
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Property Editor]
 Pos=25,24
-Size=7,5
+Size=7,4
 Collapsed=0
 DockId=0x00000002,1
 
@@ -85,7 +84,7 @@ Collapsed=0
 
 [Window][Model registry]
 Pos=25,24
-Size=7,5
+Size=7,4
 Collapsed=0
 DockId=0x00000002,0
 
@@ -101,12 +100,12 @@ Collapsed=0
 
 [Window][Project editor]
 Pos=25,24
-Size=7,5
+Size=7,4
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Add static mesh to scene]
-Pos=471,260
+Pos=644,275
 Size=261,92
 Collapsed=0
 
@@ -142,28 +141,34 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=15,5
+Size=15,4
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Material editor]
 Pos=0,24
-Size=15,5
+Size=15,4
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Texture viewer]
 Pos=17,24
-Size=6,5
+Size=6,4
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Lighting]
+Pos=0,30
+Size=32,2
+Collapsed=0
+DockId=0x00000006,1
+
 [Docking][Data]
 DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
-  DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,669 Split=X
+  DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,596 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0x9A68760C
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
       DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
       DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x27CF05AC
-  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,166 Selected=0xB7722E25
+  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,239 Selected=0xB7722E25
 
